[gd_scene load_steps=5 format=3 uid="uid://dih21h34x7by6"]

[ext_resource type="StyleBox" uid="uid://ddntcu16ssfif" path="res://StylesAndLabels/FloatingPanel.tres" id="1_mmxpq"]
[ext_resource type="Script" path="res://SharedUI/UIButtonsAndPanels/BuildPanel.gd" id="1_thxis"]
[ext_resource type="LabelSettings" uid="uid://cvlyjmf5fwwj0" path="res://StylesAndLabels/3rdRead-Subtitle.tres" id="2_8w7cr"]
[ext_resource type="PackedScene" uid="uid://c3kplm0etxp0p" path="res://SharedUI/UIButtonsAndPanels/BuildingButton.tscn" id="2_nr33l"]

[node name="SubMenu" type="PanelContainer"]
custom_minimum_size = Vector2(400, 500)
size_flags_horizontal = 0
theme_override_styles/panel = ExtResource("1_mmxpq")
script = ExtResource("1_thxis")
theme_override_styles/panel = ExtResource("1_mmxpq")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MenuName" type="Label" parent="VBox"]
layout_mode = 2
text = "Building Production"
label_settings = ExtResource("2_8w7cr")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/ScrollContainer"]
layout_mode = 2
alignment = 1

[node name="Gigafactory" parent="VBox/ScrollContainer/VBoxContainer" instance=ExtResource("2_nr33l")]
layout_mode = 2
buildingRef = "Gigafactory"

[node name="FusionReactor" parent="VBox/ScrollContainer/VBoxContainer" instance=ExtResource("2_nr33l")]
layout_mode = 2
buildingRef = "Fusion Reactor"

[node name="CelestialExtractor" parent="VBox/ScrollContainer/VBoxContainer" instance=ExtResource("2_nr33l")]
visible = false
layout_mode = 2
buildingRef = "Celestial Extractor"

[node name="DysonSwarm" parent="VBox/ScrollContainer/VBoxContainer" instance=ExtResource("2_nr33l")]
visible = false
layout_mode = 2
buildingRef = "Dyson Swarm"

[node name="MagneticBore" parent="VBox/ScrollContainer/VBoxContainer" instance=ExtResource("2_nr33l")]
visible = false
layout_mode = 2
buildingRef = "Magnetic Bore"

[node name="AntimatterFactory" parent="VBox/ScrollContainer/VBoxContainer" instance=ExtResource("2_nr33l")]
visible = false
layout_mode = 2
buildingRef = "Antimatter Factory"

[node name="StellarAccelerator" parent="VBox/ScrollContainer/VBoxContainer" instance=ExtResource("2_nr33l")]
visible = false
layout_mode = 2
buildingRef = "Stellar Accelerator"

[node name="Starlifter" parent="VBox/ScrollContainer/VBoxContainer" instance=ExtResource("2_nr33l")]
visible = false
layout_mode = 2
buildingRef = "Starlifter"
